# tui-games-launcher

./: .SRCINFO  PKGBUILD  README.md  games.toml  pyproject.toml
src/: main.py
src/tui_games_launcher/: main.py
